<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.zarbosoft.pyxyzygy</groupId>
    <artifactId>nearestneighborimageview</artifactId>
    <version>1.0.0</version>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
            <groupId>net.bytebuddy</groupId>
            <artifactId>byte-buddy</artifactId>
            <version>1.9.8</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>1.7</version>
                <executions>
                    <execution>
                        <id>add-target-sources-dir</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${project.build.directory}/src</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <executions>
                    <execution>
                        <id>generate-model</id>
                        <phase>generate-sources</phase>
                        <configuration>
                            <tasks>
                                <taskdef name="generateTask"
                                         classname="com.zarbosoft.pyxyzygy.generate.GenerateGraphicsProxy"
                                         classpath="${maven.dependency.classpath}"/>
                                <generateTask path="${project.build.directory}/src"/>
                            </tasks>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.zarbosoft.pyxyzygy</groupId>
                        <artifactId>generate</artifactId>
                        <version>1.0.0</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.9</source>
                    <target>1.9</target>
                    <compilerArgs>
                        <arg>--add-exports=javafx.graphics/com.sun.glass.ui=com.zarbosoft.pyxyzygy.nearestneighborimageview</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.prism=com.zarbosoft.pyxyzygy.nearestneighborimageview</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.prism.paint=com.zarbosoft.pyxyzygy.nearestneighborimageview</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.font=com.zarbosoft.pyxyzygy.nearestneighborimageview</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.geom=com.zarbosoft.pyxyzygy.nearestneighborimageview</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.geom.transform=com.zarbosoft.pyxyzygy.nearestneighborimageview</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.scene.text=com.zarbosoft.pyxyzygy.nearestneighborimageview</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.sg.prism=com.zarbosoft.pyxyzygy.nearestneighborimageview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>